src/test/fail/infinite_eq.ly
<@lily
list[any] lso = [1, 2, 3]
lso[0] = lso
if lso == lso:
	print("This will never happen.\n")
@>
